# autocards

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pixi.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: ci.yml
example/: example.apkg
src/autocards/: llm.py  main.py
src/autocards/templates/de/: create_qa_pairs.txt  example.txt  system.txt
src/autocards/templates/en/: create_qa_pairs.txt  system.txt
tests/: test_base.py
